Use jakarta annotation